--- a/views/accueil.ejs
+++ b/views/accueil.ejs
@@ -2,42 +2,33 @@
 
 <html>
     <head>
-        <title>Test Redis</title>
+        <title>TP Twitter</title>
         <style>
             a {text-decoration: none; color: black;}
         </style>
     </head>
-    <%
-        if(typeof locals.key == 'undefined'){
-            locals.key ='';
-        }
-        if(typeof locals.value == 'undefined'){
-            locals.value ='';
-        }
-    %>
     <body>
-        <h3>Inserez clé et valeur</h3>
-    	<form action="/redis/set/" method="post">
+        <h3>Veuillez vous connecter :</h3>
+    	<form action="/tptwitter/login/" method="post">
             <p>     
-                <label for="key">Clé</label>
-                <input type="text" name="key" id="key" autofocus />
-                <label for="value">Valeur</label>
-                <input type="text" name="value" id="Value" autofocus />
+                <label for="login">Login</label>
+                <input type="text" name="login" id="login" autofocus />
+                <label for="passwd">Password</label>
+                <input type="password" name="passwd" id="passwd" autofocus />
                 <input type="submit" />
             </p>
         </form>
-        <% if(locals.key != '' && locals.value !=''){ %>
-            <div>
-                <p> Clé : <%= key%> </p>
-                <p> Valeur : <%= value%> </p>
-            </div>
-        <% } %>
-        <h3>Clé à trouver</h3>
-        <form action="/redis/get/" method="post">
+        <br/>
+        <h3>Ou inscrivez-vous :</h3>
+        <form action="/tptwitter/newuser/" method="post">
             <p>     
-                <label for="key">Clé</label>
-                <input type="text" name="key" id="key" autofocus />
-                <input type="submit" />
+                <label for="newlogin">Username</label>
+                <input type="text" name="newlogin" id="newlogin" autofocus />
+                <label for="newpasswd">Password</label>
+                <input type="password" name="newpasswd" id="newpasswd" autofocus />
+                <label for="newpasswd2">Retype your Password</label>
+                <input type="password" name="newpasswd2" id="newpasswd2" autofocus />
+                <input type="submit"/>
             </p>
         </form>
     </body>
