fin définition rest + passage userid plutot que user

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,14 +70,10 @@
                    data : "login=" + $('#login').val() + "&passwd=" + $('#passwd').val(),
                    success : function(result){
                         $('#ResultLogin').text(result.msg);
-                        alert(result.user);
+                        alert(result.userid);
                         if(result.success==true){
-                            /*var form = document.createElement('form');
-                            form.method = 'post';
-                            form.action = '/home';
-                            form.submit();*/
                             var form = '';
-                            form += '<input type="hidden" name="user" value="'+ result.user +'">';
+                            form += '<input type="hidden" name="user" value="'+ result.userid +'">';
                             $('<form action="/home" method="POST">'+form+'</form>').appendTo('body').submit();
                         }
                    }
