--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>testyo</title>
+        <title>TP Twitter</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="//bootswatch.com/cerulean/bootstrap.min.css">
-        <link rel="stylesheet" href="//bootswatch.com/cerulean/bootstrap.css">
+        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css">
+        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         
         <title>TP Twitter</title>
@@ -21,8 +21,9 @@
         <div class="container-fluid">
 
             <div class="navbar-header">
+
                 <a class="navbar-brand" href="#">
-                    <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+                    <!--<span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>-->
                     TP Twitter
                 </a>
             </div>
@@ -73,12 +74,14 @@
                         alert(result.userid);
                         if(result.success==true){
                             var form = '';
-                            form += '<input type="hidden" name="user" value="'+ result.userid +'">';
+                            form += '<input type="hidden" name="userid" value="'+ result.userid +'">';
                             $('<form action="/home" method="POST">'+form+'</form>').appendTo('body').submit();
                         }
                    }
                 });
             }
+
+            //document.cookie =name + "=" + value + expire;
         </script>
 
 
