structure home.ejs, ajout partial view header.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Test Redis</title>
-        <style>
-            a {text-decoration: none; color: black;}
-        </style>
-    </head>
+	<%- include header.ejs %>
 
-    <body>
-        <p>Value not found in database :( </p>
-    </body>
+	<body>
+		<div class="row" >
+			<div class='col-lg-4'>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class ="panel-title">Followers</h3>
+					</div>
+					<div class-"panel-body">
+						<p>Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs</p>
+					</div> 
+				</div>
+			</div>
+
+			<div class='col-lg-4'>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class ="panel-title">Livefeed</h3>
+					</div>
+					<div class-"panel-body">
+						<p>Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs</p>
+					</div> 
+				</div>
+			</div>
+
+			<div class='col-lg-4'>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class ="panel-title">My Status</h3>
+					</div>
+					<div class-"panel-body">
+						<p>Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
+							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs</p>
+					</div> 
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
+
