--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,40 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>TP Twitter</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css">
-        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        
-        <title>TP Twitter</title>
-        <style>
-            a {text-decoration: none; color: black;}
-        </style>
-    </head>
-    <body>
 
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-
-            <div class="navbar-header">
-
-                <a class="navbar-brand" href="#">
-                    <!--<span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>-->
-                    TP Twitter
-                </a>
-            </div>
-
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-          
-        </div>
-    </nav>
+    <%- include header.ejs %>
 
     <!-- formulaire login -->
     <div class ='row'>
