--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,14 @@
 	<%- include header.ejs %>
 
 	<body>
+		
+		<div class='row'>
+			<legend class="col-lg-offset-1 col-lg-2 well bs-component"> Bienvenue <%=username %> </legend>
+		</div>
+		
 		<div class="row" >
-			<div class='col-lg-4'>
+
+			<div class='col-lg-offset-1 col-lg-3'>
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class ="panel-title">Followers</h3>
@@ -43,25 +49,61 @@
 				</div>
 			</div>
 
-			<div class='col-lg-4'>
+
+			<!--Formulaire pour poster un message -->
+			<div class='col-lg-3'>
 				<div class="panel panel-primary">
 					<div class="panel-heading">
-						<h3 class ="panel-title">My Status</h3>
+						<h3 class ="panel-title">Mon Humeur</h3>
 					</div>
 					<div class-"panel-body">
-						<p>Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs,
-							Des trucs, Des trucs, Des trucs, Des trucs, Des trucs</p>
+						<div class='col-lg-12'>
+							<h3 class="text-danger" id="myStatus" onload="test()"> </h3>
+						</div>
+					    <div class ='row'>
+					        <div class="col-lg-12">
+					            <div class="well bs-component">
+					                <legend>Quel est votre humeur aujourd'hui ?</legend>
+					            	<form class="form-horizontal" id="postForm"> 
+
+					                    <div class="form-group">
+
+
+					                        <div class="col-lg-10">
+					                            <input type="text" class="form-control" id="message" name="message" autofocus />
+					                            <p class="text-danger" id="ResultLogin"> </p>
+					                        </div>
+					                    </div>
+					                    <button class="btn btn-primary btn-lg-2" type="button" onclick="postMessage()"> Submit </button>
+
+					                </form>
+					            </div>
+					        </div>
+					    </div>
 					</div> 
 				</div>
 			</div>
+		    <script>
+		        function postMessage(){
+		           $.ajax({
+		               url : '/tptwitter/posts',
+		               type : 'POST',
+		               data : "userid=" + <%=userid %> + "&msg=" + $('#message').val(),
+		            });
+		           $('#message').val("");
+		        }
+
+		        function test(){
+		        	alert('test');
+		        }
+
+		        //document.cookie =name + "=" + value + expire;
+		    </script>
+
+
 		</div>
+
+
 	</body>
 </html>
 
