--- a/views/header.html
+++ b/views/header.html
@@ -28,6 +28,46 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
         </ul>
-      
+        <form class="navbar-form navbar-left" role="search">
+
+            <div class="form-group" id="searchBar">
+            </div>
+           
+        </form>
+
+
     </div>
 </nav>
+
+<script>
+    $(function(){
+        $('#searchBar').append('<input id="userSearch" class="form-control" type="text" placeholder="Search User"> <button class="btn btn-default" type="submit">Follow</button>');
+        $.ajax({
+            url : 'http://localhost:8000/tptwitter/users/',
+            dataType : 'json',
+            type : 'GET',
+            success : function(result) {
+                var names = Object.keys(result);
+                $('#userSearch').autocomplete({
+                    source : names,
+                    select: function(event, ui){
+                        var name = ui.item.value;
+                        $.ajax({
+                           url : 'http://localhost:8000/tptwitter/followings',
+                           dataType : 'json',
+                           type : 'POST',
+                           data : "userid=" + userid + "&followid=" + result[ui.item.value],
+                           success : function (response){
+                                if(response.result){
+                                    alert('You follow ' +  name);
+                                }else{
+                                    alert('Failed to follow ' + name);
+                                }
+                            }
+                        });
+                    }
+                });
+            }
+        });
+    });
+</script>
