--- a/views/login.html
+++ b/views/login.html
@@ -17,10 +17,12 @@
 
                     <div class="col-lg-10">
                         <input type="password" class="form-control" id="passwd" name="passwd" autofocus />
-                        <p class="text-success" id="ResultLogin"> </p>
+                        <p class="text-success" id="ResultLogin"></p>
                     </div>
                 </div>
                 <button class="btn btn-primary btn-lg-2" type="button" onclick="loginCheck()"> Submit </button>
+
+                <img id="angry_casoar" src="images/casoar3.jpg" alt="angry_casoar" class="img-responsive"/>
 
             </form>
         </div>
@@ -28,6 +30,9 @@
 </div>
 
 <script>
+    $(function(){
+        $('#angry_casoar').hide();
+    });
     function loginCheck(){
        $.ajax({
            url : 'http://localhost:8000/tptwitter/login',
@@ -46,6 +51,11 @@
                     $('#body').load('/views/home.html');
                 }else{
                     $('#ResultLogin').attr('class', "text-danger");
+
+
+
+
+                                    $('#angry_casoar').fadeIn(1000);
                 }
 
                 $('#ResultLogin').text(result.msg);
