--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
 	} 
 	//fonction pour charger le header  
     $(function(){
-		$('#welcome').text('Bienvenue ' + username);
+		$('#welcome').text('Welcome comrad ' + username);
 		loadData();
     });
 
