--- a/views/login.html
+++ b/views/login.html
@@ -21,8 +21,10 @@
                     </div>
                 </div>
                 <button class="btn btn-primary btn-lg-2" type="button" onclick="loginCheck()"> Submit </button>
-
-                <img id="angry_casoar" src="images/casoar3.jpg" alt="angry_casoar" class="img-responsive"/>
+                <div id="angry_casoar">
+                    <br/>
+                    <img src="images/casoar3.jpg" alt="angry_casoar" class="img-responsive"/>
+                </div>
 
             </form>
         </div>
