--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,15 @@
-<h1>JOIN THE REVOLUTION OF CASOARS !</h1>
+<div class ='row'>
+    <div class="ol-lg-5">
+    	<div class="well bs-component">
+		<h1 class="text-center">JOIN THE REVOLUTION OF CASOARS !</h1>
+		<div class="row">
+			<img src="images/casoar5.jpg" class="img-responsive center-block">
+		</div>
+		<div class="row">
+			<h2 class="text-center">We can't fly but we hit hard !</h2>
+			<img src="images/cassowary-attack-2.jpg" class="img-responsive center-block">
+		</div>
+
+		<div>
+	</div>
+</div>
