--- a/views/home.html
+++ b/views/home.html
@@ -131,6 +131,7 @@
 				$.removeCookie('cookieuuid');
                 $.removeCookie('username');
                 $.removeCookie('userid');
+                alert()
                 window.location.reload();
 			}
 		</script>
@@ -188,7 +189,7 @@
 				                            <input type="text" class="form-control" id="message" name="message" autofocus />
 				                        </div>
 				                    </div>
-				                    <button class="btn btn-primary btn-lg-2" type="button" onclick="postMessage()"> Tweet like a true Casoar !</button>
+				                    <button class="btn btn-primary btn-lg-2" type="button" onclick="postMessage()"> Tweet like a true Casoar ! <img src="images/casoartweet.jpg" alt="casoar-tweet" class="img-circle"  width="80" height="80"></button>
 
 				                </form>
 				            </div>
