--- a/views/login.html
+++ b/views/login.html
@@ -93,13 +93,12 @@
                     </div>
                 </div>
                 <button class="btn btn-primary btn-lg-2" type="button" onclick="newUserCheck()"> Submit </button>
-                <div id="happy_casoar">
-                    <br/>
-                    <img src="images/casoarwelcome.jpg" alt="happy_casoar" class="img-responsive"/>
-                </div>
-
             </form>
         </div>
+    </div>
+    <div id="happy_casoar" class="col-lg-4">
+        <br/>
+        <img src="images/casoarwelcome.jpg" alt="happy_casoar" class="img-responsive img-rounded" heigth="300" width="300"/>
     </div>
 </div>
 <script>
